--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 numpy~=1.23.0
 tqdm~=4.64.0
 pandas~=1.4.3
-transformers~=4.20.1
-torch~=1.12.0
-torchcrf
+transformers~=4.18.0
+torch~=1.11.0
+torchcrf~=1.1.0
+allennlp~=2.9.3
