feat: add the features for Bert training
* add the retrivial of the reviews
* add the training for bert
* fix problems in train and requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 numpy
-tqdm~=4.64.0
+tqdm
 pandas
-transformers~=4.18.0
-torch~=1.11.0
-torchcrf~=1.1.0
-allennlp~=2.9.3
-datasets~=2.3.2
-seqeval~=1.2.2
+transformers
+torch
+torchcrf
+allennlp
+datasets
+seqeval
 pytorch-crf
+spacy
